[package]
name = "lambda-webhook"
version = "0.1.0"
authors = ["Rim <rim.buei@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.27"
hex = "0.4.2"
http = "0.2.3"
lambda_runtime = "0.2.1"
log = "^0.4"
openssl-sys = "*"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ring = "0.16.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2.1"
simple_logger = "1.6.0"

[features]
vendored = ["openssl-sys/vendored"]
