[package]
name = "lambda-webhook"
version = "0.1.1"
authors = ["Rim <rim.buei@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
hex = "0.4.3"
http = "0.2.3"
lambda_runtime = "0.3.0"
log = "^0.4"
openssl-sys = "*"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2.3"
simple_logger = "1.11.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[features]
vendored = ["openssl-sys/vendored"]
