[package]
name = "lambda-webhook"
version = "0.1.1"
authors = ["Rim <rim.buei@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.71"
hex = "0.4.3"
http = "0.2.9"
lambda_runtime = "0.7.3"
log = "^0.4.18"
openssl-sys = "*"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.3.0"
simple_logger = "3.0.0"
tokio = { version = "1.28", features = ["rt-multi-thread"] }

[features]
vendored = ["openssl-sys/vendored"]
